<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fuctions.prayers.FragmentFive">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="10sp"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        android:textSize="17sp"
        android:padding="@dimen/appbar_padding"
        />
    -->
            <TextView
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/alegreya_sans_sc_medium"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="7sp"
                android:padding="14dp"
                android:text="@string/first"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />
    <TextView
        android:id="@+id/b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/a"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="10sp"
        android:textStyle="bold"
        android:fontFamily="@font/alegreya_sans_sc_medium"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/appbar_padding"
        android:text="@string/first2"
        android:textColor="#000000"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="10sp"
        android:padding="@dimen/appbar_padding"
        android:text="@string/first3"
        android:textColor="#000000"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/c"
        android:textStyle="bold"
        android:fontFamily="@font/alegreya_sans_sc_medium"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="10sp"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/appbar_padding"
        android:text="@string/first4"
        android:textColor="#000000"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/d"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="10sp"
        android:padding="@dimen/appbar_padding"
        android:text="@string/first5"
        android:textColor="#000000"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/e"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="10sp"
        android:textStyle="bold"
        android:fontFamily="@font/alegreya_sans_sc_medium"
        android:padding="@dimen/appbar_padding"
        android:text="@string/first6"
        android:textColor="#000000"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/f"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="10sp"
        android:padding="@dimen/appbar_padding"
        android:text="@string/first7"
        android:textColor="#000000"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/g"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="10sp"
        android:textStyle="bold"
        android:fontFamily="@font/alegreya_sans_sc_medium"
        android:padding="@dimen/appbar_padding"
        android:text="@string/first8"
        android:textColor="#000000"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/h"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="10sp"
        android:padding="@dimen/appbar_padding"
        android:text="@string/first9"
        android:textColor="#000000"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/j"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/i"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="10sp"
        android:textStyle="bold"
        android:fontFamily="@font/alegreya_sans_sc_medium"
        android:padding="@dimen/appbar_padding"
        android:text="@string/first10"
        android:textColor="#000000"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/k"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/j"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="10sp"
        android:padding="@dimen/appbar_padding"
        android:text="@string/first11"
        android:textColor="#000000"
        android:textSize="17sp" />
            <TextView
                android:id="@+id/l"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/l"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="10sp"
                android:textStyle="bold"
                android:fontFamily="@font/alegreya_sans_sc_medium"
                android:padding="@dimen/appbar_padding"
                android:text="@string/first12"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/j"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="10sp"
                android:padding="@dimen/appbar_padding"
                android:text="@string/first13"
                android:textColor="#000000"
                android:textSize="17sp" />
            <TextView
                android:id="@+id/n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/m"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="10sp"
                android:textStyle="bold"
                android:fontFamily="@font/alegreya_sans_sc_medium"
                android:padding="@dimen/appbar_padding"
                android:text="@string/first14"
                android:textColor="#000000"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/o"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/n"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="10sp"
                android:padding="@dimen/appbar_padding"
                android:text="@string/first15"
                android:textColor="#000000"
                android:textSize="17sp" />
            <TextView
                android:id="@+id/p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/o"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="10sp"
                android:textStyle="bold"
                android:fontFamily="@font/alegreya_sans_sc_medium"
                android:padding="@dimen/appbar_padding"
                android:text="@string/first16"
                android:textColor="#000000"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/q"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/p"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="10sp"
                android:padding="@dimen/appbar_padding"
                android:text="@string/first17"
                android:textColor="#000000"
                android:textSize="17sp" />
            <TextView
                android:id="@+id/r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/q"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="10sp"
                android:padding="@dimen/appbar_padding"
                android:text="@string/first18"
                android:textColor="#000000"
                android:textSize="17sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>